# sidebar-notes

./: .gitignore  CLAUDE.md  README.md  dev-launch.bat  dev-launch.vbs  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  hotkeys.ts  index.css  store.ts  types.ts  utils.test.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  ConfirmModal.tsx  ContextMenu.tsx  DebugDrawer.tsx  Editor.tsx  HelpOverlay.tsx  Icons.tsx  NoteList.tsx  QuickSwitcher.tsx  SchemeSwitcher.tsx  Settings.tsx
src/extensions/: imagePaste.ts  markdownStyle.ts
src/hooks/: useAutoSave.ts  useNotes.ts
