[package]
name = "sidebar-notes"
version = "0.1.0"
description = "A quick sidebar notes app"
authors = ["you"]
edition = "2021"

[lib]
name = "sidebar_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
